blog-info added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
-    i
     <!-- Font Wassome -->
     <script src="https://kit.fontawesome.com/f61e8f6266.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
@@ -16,9 +15,25 @@
 <body>
     <!-- header start -->
     <header>
-
+        <h3 class="header-title">Influencer products</h3>
     </header>
     <!-- header end -->
+    <main>
+        <!-- blog-info start -->
+        <section class="container1">
+            <div class="blog-info">
+                <h1 class="section-title">Start your Journey as <br>
+                    Influencer</h1>
+                <p class="blog">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque
+                    eros. Lectus faucibus.</p>
+                <a target="-blank" class="button" href="">Preebook now <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="blog-img">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </section>
+        <!-- blog-info end -->
+    </main>
 </body>
 
 </html>
