--- a/index.html
+++ b/index.html
@@ -233,10 +233,74 @@
 
         </section>
         <!-- product chart end -->
+        <!-- customer review start -->
+        <section class="container3">
+            <div class="reviews-container">
+                <h3 class="section-title3 button">Customer Review </h3>
+                <div class="reviews">
+                    <div class="review">
+                        <img src="images/person-3.png" alt="">
+                        <div class="review-details">
+                            <h3 class="review-name">Farhan Sadik</h3>
+                            <div class="review-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+
+
+                            </div>
+                            <p class="review-details">
+                                After purchasing a caravan & found that it was supplied with a normal dash mount camera.
+                                I
+                                contacted safety Dave for the cost of a rear vision mount & they said no cost just send
+                                it
+                                to them & it will be fine so good to have a company that believes in after sale service
+                            </p>
+                        </div>
+                    </div>
+                    <div class="review">
+                        <img src="images/person-2.png" alt="">
+                        <div class="review-details">
+                            <h3 class="review-name">Jamal Khan</h3>
+                            <div class="review-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+
+
+                            </div>
+                            <p class="review-details">
+                                It's made of quality materials and has easy secure mounting over the mirror, also it's
+                                natural to look at the mirror location. We use the dual rear cameras with it and it's a
+                                single touch to switch between cameras - perfect. The image isn't as sharp as a phone
+                                screen
+                                but it's sharp enough. We are more than happy with this combination.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- customer review end -->
 
     </main>
     <footer>
-        .footer-conta
+        <div class="footer-content">
+            <h3>Influencer products</h3>
+            <p>Copyright &copy; 2020 influencer products</p>
+            <p>All rights reserved</p>
+            <div class="social-icon">
+                <a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                <a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                <a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                <a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
     </footer>
 </body>
 
