--- a/index.html
+++ b/index.html
@@ -34,199 +34,205 @@
         </section>
         <!-- blog-info end -->
         <!-- product chart start -->
-        <section class="container2">
-            <div>
-                <h3 class="section-title2">Popular Collection</h3>
-            </div>
-
-            <div class="product-chart">
-                <div class="product">
-                    <img src="images/tripod.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Flex Tripod</h3>
-                        <h2 class="product-price">$50.48</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
-
-                        </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
-                    </div>
+        <section>
+            <div class="container2">
+                <div>
+                    <h3 class="section-title2">Popular Collection</h3>
                 </div>
-                <div class="product">
-                    <img src="images/mic.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">microphone</h3>
-                        <h2 class="product-price">$120.25</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
 
+                <div class="product-chart">
+                    <div class="product">
+                        <img src="images/tripod.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Flex Tripod</h3>
+                            <h2 class="product-price">$50.48</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
+
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/airpod.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Airbuds</h3>
-                        <h2 class="product-price">$100.00</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/mic.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">microphone</h3>
+                            <h2 class="product-price">$120.25</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/drone.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Drone</h3>
-                        <h2 class="product-price">$980.25</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/airpod.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Airbuds</h3>
+                            <h2 class="product-price">$100.00</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/lights.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Light Setup</h3>
-                        <h2 class="product-price">$1200.00</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/drone.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Drone</h3>
+                            <h2 class="product-price">$980.25</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/setup.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Photoshoot set</h3>
-                        <h2 class="product-price">$820.40</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/lights.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Light Setup</h3>
+                            <h2 class="product-price">$1200.00</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/camera.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Vlogging Camera</h3>
-                        <h2 class="product-price">$1800.80</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/setup.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Photoshoot set</h3>
+                            <h2 class="product-price">$820.40</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/single-light.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Green Screen</h3>
-                        <h2 class="product-price">$25.48</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/camera.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Vlogging Camera</h3>
+                            <h2 class="product-price">$1800.80</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
                     </div>
-                </div>
-                <div class="product">
-                    <img src="images/action.png" alt="">
-                    <div class="product-details">
-                        <h3 class="product-name">Action Camera</h3>
-                        <h2 class="product-price">$380.00</h2>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span class="rating-value">4.99</span>
+                    <div class="product">
+                        <img src="images/single-light.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Green Screen</h3>
+                            <h2 class="product-price">$25.48</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
 
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
                         </div>
-                        <p class="product-delivery">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
+                    </div>
+                    <div class="product">
+                        <img src="images/action.png" alt="">
+                        <div class="product-details">
+                            <h3 class="product-name">Action Camera</h3>
+                            <h2 class="product-price">$380.00</h2>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-value">4.99</span>
+
+                            </div>
+                            <p class="product-delivery">
+                                Wordwide shifting <br>
+                                available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                        <div class="expand-button">
+                            <a href="" target="_blank" rel="noopener noreferrer">See More <i
+                                    class="fas fa-arrow-right"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
