--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
-    <!-- Font Wassome -->
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/f61e8f6266.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
                     Influencer</h1>
                 <p class="blog">Are you an aspiring influencer who is adamant about starting their influencer journey in
                     2022? </p>
-                <a target="-blank" class="button" href="">Preebook now <i class="fas fa-arrow-right"></i></a>
+                <a target="-blank" class="button" href=""> Preebook now <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="blog-img">
                 <img src="images/main-camera.png" alt="">
@@ -254,8 +254,6 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star-half-alt"></i>
-
-
                             </div>
                             <p class="review-details">
                                 After purchasing a caravan & found that it was supplied with a normal dash mount camera.
@@ -276,8 +274,6 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star-half-alt"></i>
-
-
                             </div>
                             <p class="review-details">
                                 It's made of quality materials and has easy secure mounting over the mirror, also it's
